codama-syn-helpers/tests-macros/tests/as_path_value/from_path_list.fail.stderr
error: expected `=` followed by a single value: `foo = ...`
 --> tests/as_path_value/from_path_list.fail.rs:3:21
  |
3 | #[as_path_value(foo(1, 2, 3))]
  |                     ^^^^^^^

error: expected a single value, found a list
 --> tests/as_path_value/from_path_list.fail.rs:6:24
  |
6 | #[as_path_value(foo = (1, 2, 3))]
  |                        ^^^^^^^
